@@ -408,27 +408,27 @@ local moveDatas = {
 local defs = {}
 
 for moveName, moveData in pairs(moveDatas) do
-	--if moveData.maxslope and (moveData.maxslope < 60) then
-	--	moveData.maxslope = 34
-	--else
-	--	moveData.IsAllTerrain = true
-	--	moveData.maxslope = 60
-	--end
+	if moveData.maxslope and (moveData.maxslope < 60) then
+		moveData.maxslope = 34
+	else
+		moveData.IsAllTerrain = true
+		moveData.maxslope = 60
+	end
 	
 	moveData.heatmapping = true
 	moveData.name = moveName
 	moveData.allowRawMovement = true
 	if moveName and string.find(moveName, "KBOT") and moveData.maxslope then
 		moveData.slopemod = 4
-		--if moveData.IsAllTerrain then
-		--	moveData.slopemod = 2
-		--else
-		--	moveData.speedModClass = 0
-		--end
+		if moveData.IsAllTerrain then
+			moveData.slopemod = 2
+		else
+			moveData.speedModClass = 0
+		end
 	else
-		--moveData.slopemod = 60
+		moveData.slopemod = 60
 	end
-	--moveData.IsAllTerrain = nil
+	moveData.IsAllTerrain = nil
 	defs[#defs + 1] = moveData
 end
 
