@@ -1,5 +1,6 @@
 ﻿10.24 -> 1.00
 
+ • Movedefs/slopes equalized to allow for less steep, more beautifull map slopes
  • Enabled ground deformation
 
 
